Documentation Improvements
Previously the documentation had gotten out of date with the current
implementation.  This change updates the documentation to match the current
implementation.

[resolves #23]

Signed-off-by: Ben Hale <bhale@pivotal.io>